<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:isScrollContainer="true"
    android:background="@drawable/ic_bakgrunn_lys_2"
    android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"

            >

            <LinearLayout
                android:id="@+id/tur_tittelboks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway"
                    android:text="@string/skred_og_vaer_tittel"
                    android:textAlignment="center"
                    android:textColor="@color/figmaBlack"
                    android:textSize="24sp"
                    android:textStyle="bold" />



            </LinearLayout>

            <LinearLayout
                android:id="@+id/informasjonsBoks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tur_tittelboks">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/skredRan"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:textColor="@color/figmaBlack"
                        android:gravity="center"
                        android:text="@string/skred_tittel"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/vaerInfo"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingBottom="5dp"
                        android:gravity="center"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:textColor="@color/figmaBlack"
                        android:gravity="center"
                        android:text="@string/vaer_tittel"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="346dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/informasjonsBoks">

                <ImageView
                    android:id="@+id/skillestrek"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/steel_teal"
                    tools:ignore="ContentDescription" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.116"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/skillestrek">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginEnd="20dp"
                        android:textColor="@color/figmaBlack"
                        android:gravity="center"
                        android:text="@string/gjeldende_region"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/region_felt"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:textColor="@color/figmaBlack"
                        android:gravity="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="start"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.116"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/skillestrek">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/figmaBlack"
                    android:gravity="center"
                    android:text="@string/siste_oppdatering"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sisteOppdatering"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:textColor="@color/figmaBlack"
                    android:gravity="center" />

            </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/figmaBlack"
                    android:text="@string/skredproblem"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/skredProblemer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="@color/figmaBlack"
                    android:text="@string/ingen_registrert_data" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/figmaBlack"
                    android:text="@string/tips"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/skredTips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="@color/figmaBlack"
                    android:text="@string/ingen_registrert_data" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/figmaBlack"
                    android:text="@string/utvidet_skredvarsel"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/utvidetInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/figmaBlack"
                    android:padding="10dp"
                    android:text="@string/ingen_registrert_data" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/steel_teal"
                    tools:ignore="ContentDescription" />




                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/figmaBlack"
                        android:text="@string/temperatur"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/temperatur"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/figmaBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ingen_registrert_data" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/figmaBlack"
                        android:text="@string/vind"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/windContainer"
                        android:padding="2dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_width="match_parent"
                        android:textColor="@color/figmaBlack"
                        android:layout_height="wrap_content"
                        android:text="@string/ingen_registrert_data" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/figmaBlack"
                        android:text="@string/sikt"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/siktContainer"
                        android:padding="2dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_width="match_parent"
                        android:textColor="@color/figmaBlack"
                        android:layout_height="wrap_content"
                        android:text="@string/ingen_registrert_data" />


            </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
