<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_bakgrunn_lys_2"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:isScrollContainer="true"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/tur_tittelboks"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tur_bilde">

            <TextView
                android:id="@+id/tur_tittel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:text="@string/turinformasjon_tittel"
                android:textAlignment="center"
                android:textColor="@color/dark_jungle_green"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/omrade_innhold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/innhold_fill"
                android:textAlignment="center"
                android:textColor="@color/dark_jungle_green"
                android:textSize="16sp" />
        </LinearLayout>


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/tur_bilde"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:adjustViewBounds="true"
            android:baselineAlignBottom="true"
            android:src="@mipmap/ic_launcher"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/tur_tittelboks"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/infoboks"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tur_tittelboks">

            <!--Venstre informasjonsboks container-->
            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="start|center_vertical">

                    <TextView
                        android:id="@+id/tur_distanse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_timeline"
                        android:drawablePadding="5dp"
                        android:textColor="@color/dark_jungle_green"
                        tools:text="8.2 km" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical">

                    <TextView
                        android:id="@+id/tur_varighet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_stopwatch"
                        android:drawablePadding="5dp"
                        android:textColor="@color/dark_jungle_green"
                        tools:text="1.5 timer" />

                </LinearLayout>
            </LinearLayout>

            <!--Høyre informasjonsboks container-->
            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="start|center_vertical">

                    <TextView
                        android:id="@+id/tur_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_directions_walk"
                        android:drawablePadding="5dp"
                        android:textColor="@color/dark_jungle_green"
                        tools:text="Topptur" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical">

                    <TextView
                        android:id="@+id/tur_gradering"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_dumbell"
                        android:drawablePadding="5dp"
                        android:textColor="@color/dark_jungle_green"
                        tools:text="Gradering" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/beskrivelse"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/raleway_medium"
            tools:text="@string/lorem_ispum"
            android:textColor="@color/dark_jungle_green"
            android:textSize="16sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:lineSpacingMultiplier="1.2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView" />


    <!-- Dette er to streker laget for å skille dataen -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="346dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/steel_teal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoboks"
        tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
